<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF9FF">

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="151dp"
        android:background="#FAF9FF"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="#161826"
        android:textSize="26sp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_exists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:text="@string/profile_exists"
        android:textColor="#FF0000"
        android:textSize="11sp"
        android:visibility="invisible"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintBottom_toTopOf="@+id/first_name"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/rounded_corner_15dp"
        android:gravity="center"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="#7B7B7B"
        android:textSize="11sp"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corner_15dp"
        android:gravity="center"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="#7B7B7B"
        android:textSize="11sp"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <TextView
        android:id="@+id/email_is_not_in_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:text="@string/email_is_not_in_format"
        android:textColor="#FF0000"
        android:textSize="11sp"
        android:visibility="invisible"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corner_15dp"
        android:gravity="center"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="#7B7B7B"
        android:textSize="11sp"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_regular"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/sign_in"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textSize="14sp"
        android:textStyle="bold"
        android:background="@drawable/rounded_corner_15dp_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/log_in"
        android:textColor="#254FE6"
        android:textSize="10sp"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    <TextView
        android:id="@+id/already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/already_have_account"
        android:textColor="#808080"
        android:textSize="10sp"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toStartOf="@+id/log_in"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    <TextView
        android:id="@+id/sign_in_with_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/sign_in_with_google"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in" />

    <ImageView
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/sign_in_with_google"
        app:layout_constraintEnd_toStartOf="@+id/sign_in_with_google"
        app:layout_constraintTop_toBottomOf="@+id/log_in"
        app:srcCompat="@drawable/ic_google" />

    <TextView
        android:id="@+id/sign_in_with_apple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/sign_in_with_apple"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_with_google" />

    <ImageView
        android:id="@+id/apple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/sign_in_with_apple"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toStartOf="@+id/sign_in_with_apple"
        app:layout_constraintTop_toBottomOf="@+id/google"
        app:srcCompat="@drawable/ic_apple" />
</androidx.constraintlayout.widget.ConstraintLayout>