<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF9FF">
    <TextView
        android:id="@+id/welcome_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="151dp"
        android:background="#FAF9FF"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textColor="#161826"
        android:textSize="26sp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wrong_name_or_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:text="@string/wrong_name_or_password"
        android:textColor="#FF0000"
        android:textSize="11sp"
        android:visibility="invisible"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintBottom_toTopOf="@+id/first_name"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/rounded_corner_15dp"
        android:gravity="center"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="#7B7B7B"
        android:textSize="11sp"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_back" />

    <EditText
        android:id="@+id/password"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corner_15dp"
        android:gravity="center"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#7B7B7B"
        android:textSize="11sp"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="93dp"
        android:fontFamily="@font/montserrat_regular"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/login"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textSize="14sp"
        android:textStyle="bold"
        android:background="@drawable/rounded_corner_15dp_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ImageView
        android:id="@+id/show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintTop_toTopOf="@+id/password"
        app:srcCompat="@drawable/ic_hide_password"
        app:tint="#5C5C5C" />

    <ImageView
        android:id="@+id/hide_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintTop_toTopOf="@+id/password"
        app:srcCompat="@drawable/ic_show_password"
        app:tint="#5C5C5C" />
</androidx.constraintlayout.widget.ConstraintLayout>